basic template with header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,8 @@
 body {
   padding: 0;
   margin: 0;
+  max-width: 100%;
+  background: var(--light-grey); /* Color of the background to fill empty edges spaces on safari ios */
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -8,3 +10,26 @@ body {
 * {
   box-sizing: border-box;
 }
+
+
+
+/* Changes of default settings */
+input {
+    outline: none;
+}
+
+button {
+    -webkit-tap-highlight-color: transparent;
+    cursor: pointer;
+}
+
+div {
+    -webkit-tap-highlight-color: transparent;
+}
+
+
+
+
+
+
+
