--- a/styles/layout/Header.module.css
+++ b/styles/layout/Header.module.css
@@ -1,16 +1,17 @@
 /* Computer */
 @media only screen and (min-width: 1100px) and (aspect-ratio < 1),
 only screen and (min-height: 600px) and (aspect-ratio > 1) {
-.body {
+.mainContainer {
     min-height: var(--header-height);
     width: 100vw;
     background-color: var(--strong-black);
-    position : absolute;
+    position : fixed;
     top: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: 9;
 }
 
 .headerTitle {
@@ -26,15 +27,17 @@ only screen and (min-height: 600px) and (aspect-ratio > 1) {
 /* Phones */
 @media only screen and (max-width: 1100px) and (aspect-ratio < 1),
 only screen and (max-height: 600px) and (aspect-ratio > 1) {
-.body {
+.mainContainer {
     min-height: var(--header-height);
     background-color: var(--strong-black);
+    width : 100vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: sticky;
+    position: fixed;
     top: 0;
+     z-index: 9;
 }
 
 .headerTitle {
