--- a/styles/components.css
+++ b/styles/components.css
@@ -8,6 +8,10 @@
     margin: 0;
 }
 
+.noTransition {
+    transition: none !important;
+}
+
 :root {
     --regular-card-width: calc(var(--regular-item-width) + var(--card-lateral-padding) * 2);
 }
@@ -56,7 +60,7 @@ only screen and (min-height: 600px) and (aspect-ratio > 1) {
         background-color: var(--light-grey);
         width: 100vw;
         height: calc(100dvh - var(--header-height));
-        top : var(--header-height);
+        top: var(--header-height);
         position: relative;
         display: flex;
         flex-direction: column;
@@ -130,7 +134,7 @@ only screen and (max-height: 600px) and (aspect-ratio > 1) {
     }
 
     /* Components style */
-      .pageBody {
+    .pageBody {
         background-color: var(--light-grey);
         width: 100vw;
         min-height: calc(100dvh - var(--header-height));
