strong grey / medium grey modifications

--- a/styles/components.css
+++ b/styles/components.css
@@ -20,7 +20,7 @@
 
 .medGreyBorder {
     background-color: transparent;
-    border: 2px solid var(--medium-grey);
+    border: 2px solid var(--strong-grey);
 }
 
 .brightRedBg {
