--- a/styles/colors.css
+++ b/styles/colors.css
@@ -7,19 +7,25 @@ input::placeholder {
 :root {
 
     --bright-white: rgba(250, 248, 252, 1);
+
     --dark-white: rgba(246, 241, 254, 1);
 
     --bright-grey: rgb(211, 211, 211);
-    --light-grey: rgba(129, 129, 129, 1);
+
     --light-grey-2: rgba(149, 149, 149, 1);
+    --light-grey: rgba(129, 129, 129, 1);
+
+    --medium-grey: rgba(113, 113, 113, 1);
 
     --overflow-grey: rgb(42, 42, 42);
 
-    --medium-grey: rgb(50, 50, 50);
-    --medium-grey-2: rgb(35, 35, 35);
+    --strong-grey: rgb(50, 50, 50);
+    --strong-grey-2: rgb(35, 35, 35);
+
     --dark-grey: rgb(27, 27, 27);
 
     --strong-black: rgba(6, 0, 15, 1);
+
 
     --bright-red: rgba(234, 52, 52, 1);
     --strong-red: rgba(182, 11, 11, 1);
