--- a/styles/components.css
+++ b/styles/components.css
@@ -14,6 +14,7 @@
 
 :root {
     --regular-card-width: calc(var(--regular-item-width) + var(--card-lateral-padding) * 2);
+    --headers-height : calc(var(--header-height) + var(--horiz-menu-height));
 }
 
 /* Computer and Phones border and background styles */
@@ -42,6 +43,7 @@ only screen and (min-height: 600px) and (aspect-ratio > 1) {
     /* Main sizes of the components */
     :root {
         --header-height: 6.5vw;
+        --horiz-menu-height: 3vw;
         --page-padding-top: 2.5vw;
         --page-padding-bottom: 4vw;
         --regular-border-radius: 0.8vw;
@@ -59,8 +61,8 @@ only screen and (min-height: 600px) and (aspect-ratio > 1) {
     .pageBody {
         background-color: var(--light-grey);
         width: 100vw;
-        height: calc(100dvh - var(--header-height));
-        top: var(--header-height);
+        height: calc(100dvh - var(--headers-height));
+        top : var(--headers-height);
         position: relative;
         display: flex;
         flex-direction: column;
@@ -122,6 +124,7 @@ only screen and (max-height: 600px) and (aspect-ratio > 1) {
     /* Main sizes of the components */
     :root {
         --header-height: calc(var(--screen-coeff) * 80px);
+        --horiz-menu-height: calc(var(--screen-coeff) * 45px);
         --page-padding-top: calc(var(--screen-coeff) * 30px);
         --page-padding-bottom: calc(var(--screen-coeff) * 30px);
         --regular-border-radius: calc(var(--screen-coeff) * 10px);
@@ -137,8 +140,8 @@ only screen and (max-height: 600px) and (aspect-ratio > 1) {
     .pageBody {
         background-color: var(--light-grey);
         width: 100vw;
-        min-height: calc(100dvh - var(--header-height));
-        top: var(--header-height);
+        min-height: calc(100dvh - var(--headers-height));
+        top: var(--headers-height);
         padding-bottom: var(--page-padding-bottom);
         display: flex;
         flex-direction: column;
