--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,3 +1,14 @@
+  .error {
+      color: var(--strong-red);
+  }
+
+  .success {
+      color: var(--light-green)
+  }
+
+
+
+  
 /* Computer */
 @media only screen and (min-width: 1100px) and (aspect-ratio < 1),
 only screen and (min-height: 600px) and (aspect-ratio > 1) {
@@ -55,7 +66,6 @@ only screen and (min-height: 600px) and (aspect-ratio > 1) {
     }
 
     .warning {
-        color: var(--strong-red);
         text-align: center;
         font-weight: 500;
         width: 100%;
@@ -121,7 +131,6 @@ only screen and (max-height: 600px) and (aspect-ratio > 1) {
     }
 
     .warning {
-        color: var(--strong-red);
         text-align: center;
         font-weight: 500;
         width: 100%;
