--- a/styles/ui/ConfirmationModal.module.css
+++ b/styles/ui/ConfirmationModal.module.css
@@ -66,12 +66,13 @@ only screen and (min-height: 600px) and (aspect-ratio > 1) {
         text-align: center;
         margin: 0;
         font-size: 1.2vw;
+        line-height: 1.4em;
     }
 
 
     .thisLine {
         width: calc(var(--regular-item-width) * 0.4);
-        margin: 2.5vw 0 1.5vw;
+        margin: 2vw 0;
     }
 }
 
@@ -117,6 +118,6 @@ only screen and (max-height: 600px) and (aspect-ratio > 1) {
 
     .thisLine {
         width: calc(var(--regular-item-width) * 0.4);
-        margin: calc(var(--screen-coeff) * 30px) 0 calc(var(--screen-coeff) * 22px);
+        margin: calc(var(--screen-coeff) * 20px) 0;
     }
 }
